bin_SCRIPTS = enable-fb1 miracle-disconnect miracle-gst gstplayer uibc-viewer miracle-omxplayer
EXTRA_DIST = wpa.conf

dbuspolicydir=$(sysconfdir)/dbus-1/system.d
dbuspolicy_DATA = org.freedesktop.miracle.conf

bashcompletiondir=${datadir}/bash-completion/completions
bashcompletion_DATA=miraclecast-completion

